Bookmark feature + exclusive labels support + context aware sharing + file viewer improvements (#1623)
Closes #1619

Closes #1604

Closes #1585

Reviewed-on: https://codeberg.org/gitnex/GitNex/pulls/1623